# ninelives

./: .bazelrc  .gitignore  9l-mode.el  LICENSE  MODULE.bazel  README.md  SourceLine.java  TranspilerCommand.java  TranspilerNode.java  TranspilerText.java  bazel-bin  bazel-ninelives  bazel-out  bazel-testlogs  gen_imports.sh  rules.bzl
9l/cat/: BUILD  thecat.9l  themouse.9l
9l/cloak/: BUILD  Makefile  cloak.9l  story.js
9l/loop/: BUILD  loop.9l
browsertests/: README.md  TestUtil.js  run_all_tests.sh  run_browser_test.sh  run_test.htm  serve_tests.sh
data/: game.js
doc/: guide-homebrew-install-transpiler.md  guide-install-nine-lives-compiler.md  guide-ubuntu-lts-install-transpiler.md  reference.md  state-design.md  tutorial-create-your-first-story.md
java/: BUILD
java/com/tzbits/ninelives/: BUILD  JsExpr.java  JsStrings.java  LineType.java  NineLives.java  SourceLine.java  Transpiler.java  TranspilerChoice.java  TranspilerCode.java  TranspilerNode.java  publish.sh  reference.md  rules.bzl
java/com/tzbits/ninelives/browsertests/: TestCanLog.js  TestChoiceExtraData.js  TestPersistenceConfig.js  TestRefreshPersistence.js  TestResumeBug.js
java/com/tzbits/ninelives/data/: game.css  game.js  index.htm  index.html  story.js
javatests/com/tzbits/ninelives/: BUILD  JsExprTest.java  TranspilerTest.java
tools/: BUILD  local_dev_server_bin.sh  local_www_server_bin.py
